# Decat

./: .gitignore  LICENSE  MANIFEST.in  README.md  Test Results - Unittests_in_decat_tests_py.xml  notes  rough.ipynb  setup.cfg  setup.py
decat/: __init__.py  __main__.py  __settings__.py
decat/.data/vocabulary/en/: frequency.json  tokens.json
decat/core/: __init__.py  model.py  utils.py
decat/decat/: __main__.py  __settings__.py
decat/decat/core/: __init__.py
decat/models/: concatenated_string.py  decat.py
decat/parsers/: __init__.py
decat/parsers/input_parser/: __init__.py  _parser.py  _validators.py
decat/src/: __init__.py  __settings__.py
decat/src/core/: __init__.py  model.py
decat/src/parsers/: __init__.py
decat/src/parsers/input_parser/: __init__.py  _parser.py
decat/vocabulary/: __init__.py
decat/vocabulary/english/: a.vocab  b.vocab  c.vocab  d.vocab  e.vocab  f.vocab  g.vocab  h.vocab  i.vocab  j.vocab  k.vocab  l.vocab  m.vocab  n.vocab  o.vocab  p.vocab  q.vocab  r.vocab  s.vocab  t.vocab  u.vocab  v.vocab  w.vocab  x.vocab  y.vocab  z.vocab
decat/vocabulary/english/stop_words/: stop_words.json
src/decat/: __init__.py  __main__.py  __settings__.py
src/decat/core/: model.py
src/decat/parsers/input_parser/: _parser.py  _validators.py
tests/: __init__.py  bad_tests.json  decat_tests.py  extractor_input.json  failed_cases  good_tests.json  notes  passage_input.json  rough.py
tests/passages/: 1_in.txt
