[metadata]
name = decat
version = 1.0.2
author = Mandeep Singh
author_email = singh.mandeep22207@gmail.com
description = De-concatenate strings that do not have white-spaces.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudoMode/Decat
project_urls =
    Source = https://github.com/sudoMode/Decat
    Bug Tracker = https://github.com/sudoMode/Decat/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
license = MIT
keywords = nlp, text mining

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    decat = decat:main
